--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,17 @@
 *.json
 solved_error/
 *.txt
+!predictions.txt
+!validations.txt
 !requirements.txt
+!factor_vocab0.txt
+!factor_vocab1.txt
+!src_target.txt
+!src_vocab.txt
 *.csv
 *.model
 *.vocab
 file_comparison/spm.model
 file_comparison/spm.model
-
+*.hyps
+!*.best
